# Stachniss_CPP

./: .gitattributes  README.md
Codes/: ModernC++.code-workspace
Codes/Helloworld/: HelloWorld  HelloWorld.cpp  HelloWorld.s  main.i
Codes/Lecture 3/: Lecture_3  Lecture_3.cpp
Codes/Lecture 3/Lecture 3 Tutorial/: README.md  Tutorial.cpp
Codes/Lecture 4/: arrays  arrays.cpp  associative_container  associative_container.cpp  iterators  iterators.cpp  vector  vector.cpp
Codes/Lecture_2_Core_C++/: 00205.txt  iostream  iostream.cpp  progInputParams  progInputParams.cpp  references  references.cpp  stringstreams  stringstreams.cpp  switchc++  switchc++.cpp
Codes/Lecture_5/: classExample.cpp  typeSafety.cpp  utilityClasses  utilityClasses.cpp
Codes/Library_building /: .tools.o.swp
Codes/Library_building /Basic Command/: main  tools.cpp
Codes/Library_building /CMAKE_TUT/HelloWorld Example/: CMakeLists.txt
Codes/Library_building /CMAKE_TUT/HelloWorld Example/include/: blah.h
Codes/Library_building /CMAKE_TUT/HelloWorld Example/src/: blah.cpp
Codes/Library_building /CMAKE_TUT/HelloWorld_LIB_BUILDING/: CMakeLists.txt  main.cpp
Codes/Library_building /CMAKE_TUT/HelloWorld_LIB_BUILDING/blah/: CMakeLists.txt
Codes/Library_building /CMake building/: CMakeLists.txt  main.cpp  tools.h
Codes/Library_building /cmake-master/Source/: CMakeVersion.cmake
Codes/OpenCV_Intro/: CMakeLists.txt
Codes/OpenCV_Intro/src/: OfficialTut1.cpp  intro.cpp
Codes/Templates/: CMakeLists.txt  TemplateInstantiater.cpp
Codes/Templates/include/: Stack.hpp
Codes/Templates/src/: StackDriver.cpp
Homeworks/2/homework_2/task_1/: CMakeLists.txt  test  test.cpp
Homeworks/2/homework_2/task_1/src/: main  main.cpp
Homeworks/3/homework_3/: CMakeLists.txt  FILE.html  main.cpp  test  test.cpp
Homeworks/3/homework_3/api/: CMakeLists.txt  html_writer.cpp
Homeworks/3/homework_3/api/include/: homework_3.h
Homeworks/4/homework_4/: CMakeLists.txt
Homeworks/4/homework_4/include/: homework_4.cpp  homework_4.h
Homeworks/4/homework_4/src/: Tester.cpp  main.cpp
Homeworks/5/: .gitignore
Homeworks/5/homework_5/: CMakeLists.txt  README.md
Homeworks/5/homework_5/include/: CMakeLists.txt  convert_dataset.cpp  deserialize.cpp  serialize.cpp
Homeworks/5/homework_5/src/: TESTERCODE.cpp  TESTERCODE_extern.cpp  main.cpp
Homeworks/6/homework_6/: CMakeLists.txt
Homeworks/6/homework_6/include/: image.cpp  image.h
Homeworks/6/homework_6/io_tools/: CMakeLists.txt  io_tools.cpp  io_tools.hpp
Homeworks/6/homework_6/src/: LinkerTest.cpp  Tester.cpp  main.cpp
Homeworks/7/homework_7/: CMakeLists.txt  README.md
Homeworks/7/homework_7/include/: homework_5.h  homework_7.cpp  homework_7.h  homework_7_FallbackCopy.cpp  homework_7_vanilla.cpp  homework_7_vanilla.h
Homeworks/7/homework_7/src/: main.cpp
Simple-ICP-master/EigenTesting/: test  test.cpp
Simple-ICP-master/Simple-ICP-master/Algorithms/: Icp.cpp  Icp.h
